src/defaultV2-theme/blocks/sd-table.scss
/* ... */
.sd-matrixdropdown .sd-table__cell--header:not(.sd-table__cell--empty) {
  min-width: calcSize(15);

  &.sd-table__cell--dropdown,
  &.sd-table__cell--rating {
    min-width: calcSize(22);
  }

  &.sd-table__cell--boolean {
    min-width: calcSize(18);
  }
}

.sd-table__cell--footer {
  text-align: right;
  padding-top: calcSize(1);
}

.sd-table__cell--footer-total {
  font-weight: 600;
  text-align: left;
}

.sd-table__cell--detail-panel {
  border-top: calcSize(1) solid transparent;
  padding: calcSize(3) calcSize(1) calcSize(4);
  border-bottom: calcSize(1) solid transparent;
}

.sd-table__cell--actions,
.sd-matrixdynamic__add-btn {
  .sv-action-bar {
    overflow: visible;
  }
}

.sd-table__cell--actions:not(.sd-table__cell--vertical) {
  width: calcSize(1);

  &:not(.sd-table__cell--drag):first-of-type {
    padding-left: 0;
    width: calcSize(4);
    min-width: calcSize(4);
  }
}

.sd-table__cell--detail-button {
  border: none;
  background: transparent;
  border-radius: calcSize(2);
  padding: calcSize(1);
  transition: background $transition-duration;

  svg {
    @include useEditorFontSize;
    display: block;
    width: multiply(1, $font-editorfont-size);
    height: multiply(1, $font-editorfont-size);
    fill: $font-questiondescription-color;
    transition: fill $transition-duration;
  }

  &:hover,
  &:focus {
    background: $primary-light;
    outline: none;

    svg {
      fill: $primary;
    }
  }
}

.sd-table__cell--actions {
  white-space: nowrap;

  &.sd-table__cell--vertical .sd-action-bar {
    justify-content: center;
  }
}

.sd-table__cell--row-text {
  font-weight: $font-questiontitle-weight;
  color: $font-questiontitle-color;
  text-align: left;
  min-width: calcSize(12);
  padding: calcSize(1.5) calcSize(1);
}

.sd-matrixdynamic__content .sd-table__question-wrapper {
  position: relative;
}

.sd-table__question-wrapper:not(:focus-within):hover {
  position: relative;
}

.sd-table__cell--actions:not(.sd-table__cell--vertical),
.sd-table__cell--empty,
.sd-table__cell--row-text,
.sd-table__cell--footer-total,
.sd-matrix__cell:first-of-type,
.sd-matrix tr > td:first-of-type {
  position: sticky;
  background-color: $question-background;
  z-index: 12;

  &:first-of-type {
    left: calcSize(-1);
  }

  &:last-of-type {
    right: calcSize(-1);
  }
}

.sd-table__cell--actions:not(.sd-table__cell--vertical):last-child {
  .sd-action-bar {
    margin-right: calcSize(-3);
    justify-content: flex-end;
    background: $question-background;
  }
}

.sd-question.sd-question--table {
  position: relative;
  overflow-x: auto;
}

.sd-question--table.sd-element--collapsed,
.sd-question--table.sd-element--nested {
  overflow-x: visible;
}

.sd-question--table .sd-question__header--location--left {
  z-index: 12;
}

.sd-table-wrapper {
  display: flex;
  margin: 0 calc(-1 * var(--sd-base-padding));
  width: fit-content;
  min-width: calc(100% + 2 * var(--sd-base-padding));

  &:before,
  &:after {
    content: "";
    display: block;
    position: sticky;
    min-height: 100%;
    width: calc(var(--sd-base-padding) - #{$base-unit});
    flex-shrink: 0;
    background: $question-background;
    z-index: 11;
  }

  &::before {
    left: calc(-1 * var(--sd-base-padding));
  }

  &:after {
    right: calc(-1 * var(--sd-base-padding));
  }

  & > * {
    flex-basis: 100%;
  }
}

//compact styles
.sd-element--with-frame.sd-element--compact {
  .sd-table {
    background-color: $background-dim;
  }

  .sd-table-wrapper {
    &:before,
    &:after {
      background-color: $background-dim;
    }
  }

  .sd-table__cell--actions:not(.sd-table__cell--vertical):last-child {
    .sd-action-bar {
      background-color: $background-dim;
    }
  }

  .sd-table__cell--actions:not(.sd-table__cell--vertical),
  .sd-table__cell--empty,
  .sd-table__cell--row-text,
  .sd-table__cell--footer-total,
  .sd-matrix__cell:first-of-type,
  .sd-matrix tr > td:first-of-type {
    background-color: $background-dim;
  }
}

.sd-question--table {
  & > .sd-question__header,
  .sd-question__description--under-input .sv-string-viewer {
    position: sticky;
    left: 0;
  }

  & > .sd-question__content {
    padding-top: calcSize(2);
    --animation-padding-top: #{calcSize(2)};
    min-width: min-content;
  }

  &.sd-element--nested {
    & > .sd-question__content {
      min-width: auto;
      overflow-x: auto;
    }
  }

  &.sd-element--nested > .sd-question__content,
  &:not(.sd-element--with-frame):not(.sd-element--nested) {
    padding-right: calc(var(--sd-base-padding));
    margin-right: calc(-1 * var(--sd-base-padding));
    padding-left: var(--sd-base-padding);
    margin-left: calc(-1 * var(--sd-base-padding));
    box-sizing: content-box;
  }
}

.sd-row--multiple {
  .sd-question--table.sd-element--nested > .sd-question__content {
    padding-right: calc(var(--sd-base-padding) + 2px);
  }
}

.sd-question--scroll {
  overflow-x: scroll;
}

.sd-matrixdropdown.sd-table {
  //table-layout: fixed;
}

.sd-table__row-disabled > .sd-table__cell {
  opacity: 0.25;
}
/* ... */

